blob protobuf defs
