# apps/proto/gen/openapi/blob/blob.swagger.json
@@ -4,14 +4,102 @@
     "title": "blob/blob.proto",
     "version": "version not set"
   },
+  "tags": [
+    {
+      "name": "BlobService"
+    }
+  ],
   "consumes": [
     "application/json"
   ],
   "produces": [
     "application/json"
   ],
-  "paths": {},
+  "paths": {
+    "/blob.BlobService/PutBlob": {
+      "post": {
+        "operationId": "BlobService_PutBlob",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/blobPutBlobResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/blobPutBlobRequest"
+            }
+          }
+        ],
+        "tags": [
+          "BlobService"
+        ]
+      }
+    }
+  },
   "definitions": {
+    "blobBlob": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string"
+        },
+        "userId": {
+          "type": "string"
+        },
+        "hash": {
+          "type": "string"
+        },
+        "filepath": {
+          "type": "string"
+        },
+        "mimeType": {
+          "type": "string"
+        },
+        "size": {
+          "type": "string",
+          "format": "int64"
+        },
+        "createdAt": {
+          "type": "string"
+        }
+      }
+    },
+    "blobPutBlobRequest": {
+      "type": "object",
+      "properties": {
+        "path": {
+          "type": "string"
+        },
+        "data": {
+          "type": "string",
+          "format": "byte"
+        },
+        "mimeType": {
+          "type": "string"
+        }
+      }
+    },
+    "blobPutBlobResponse": {
+      "type": "object",
+      "properties": {
+        "blob": {
+          "$ref": "#/definitions/blobBlob"
+        }
+      }
+    },
     "protobufAny": {
       "type": "object",
       "properties": {
